🔧 Fixed: Text Spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,22 +33,22 @@ body {
 }
 
 h1 {
-  @apply text-5xl font-extrabold dark:text-white;
+  @apply mb-3 text-5xl font-extrabold dark:text-white;
 }
 h2 {
-  @apply text-4xl font-bold dark:text-white;
+  @apply mb-3 text-4xl font-bold dark:text-white;
 }
 h3 {
-  @apply text-3xl font-bold dark:text-white;
+  @apply mb-3 text-3xl font-bold dark:text-white;
 }
 h4 {
-  @apply text-2xl font-bold dark:text-white;
+  @apply mb-3 text-2xl font-bold dark:text-white;
 }
 h5 {
-  @apply text-xl font-bold dark:text-white;
+  @apply mb-3 text-xl font-bold dark:text-white;
 }
 h6 {
-  @apply text-lg font-bold dark:text-white;
+  @apply mb-3 text-lg font-bold dark:text-white;
 }
 
 p {
